<resources>
    <string name="app_name">Fast Travel</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Principal</string>
    <string name="menu_gallery">Tipos de avión</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="rutas_con_descuento">Rutas con descuento</string>
    <string name="brandName">FastTravel</string>
    <string name="add_planetype">Agregar tipo de avión</string>
    <!-- TODO: Remove or change this placeholder text -->
    <!--RESEVATION VALUES-->
    <string name="title_Reservation">Reservación</string>
    <string name="origen">Origen</string>
    <string name="destination">Destino</string>
    <string name="country">País</string>
    <string name="city">Ciudad</string>
    <string name="dates">Fechas</string>
    <string name="round_trip">Ida y Vuelta</string>
    <string name="departure_date">Fecha de Ida (yyyy-MM-dd)</string>
    <string name="return_date">Fecha de Regreso (yyyy-MM-dd)</string>
    <string name="passagers_amount">Cantidad de Pasajeros</string>
    <string name="search">Buscar</string>
    <!-- CHECKOUT VALUES -->
    <string name="title_Checkout">Checkout</string>
    <string name="availability">Disponibilidad</string>
    <string name="price">Precio</string>
    <string name="sits_amount">Cantidad de Asientos</string>
    <string name="total">Total</string>
    <string name="payment_method">Método de Pago</string>
    <string name="inf_payment_method">Información del Método de Pago</string>
    <string name="reserve">Reservar</string>
    <string name="cancel">Cancelar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>