<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.airline.ui.checkout.CheckoutFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|top"
        android:text="@string/title_Checkout"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/origen" />

        <TextView
            android:id="@+id/origen_txv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:text="@string/destination" />

        <TextView
            android:id="@+id/destination_txv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:text="@string/departure_date" />

        <TextView
            android:id="@+id/departure_txv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false" />

        <TextView
            android:id="@+id/txvBackdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:text="@string/return_date" />

        <TextView
            android:id="@+id/return_txv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:text="@string/availability" />

        <TextView
            android:id="@+id/availability_txv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:text="@string/price" />

        <TextView
            android:id="@+id/price_txv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:text="@string/sits_amount" />

        <EditText
            android:id="@+id/NumbSistAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:text="@string/total" />

        <TextView
            android:id="@+id/total_txv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView22"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/payment_method" />

        <Spinner
            android:id="@+id/paymentMethod"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/editTextTextPersonName2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/inf_payment_method"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="15sp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8sp"
            android:layout_weight="1"
            android:background="#AAAAAA"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/btn_reserve"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8sp"
            android:layout_weight="1"
            android:background="#364BAF"
            android:text="@string/reserve"
            android:textAllCaps="true" />
    </LinearLayout>

</LinearLayout>