<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.airline.ui.checkout.CheckoutActivity">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|top"
        android:text="@string/title_Checkout"
        android:textColor="@color/hackberry"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/origen"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/origen_txv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:textStyle="bold"
            tools:text="Costa Rica" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:text="@string/destination"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/destination_txv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:textStyle="bold"
            tools:text="Alemania" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:text="@string/departure_date"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/departure_txv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:textStyle="bold"
            tools:text="01 de julio" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:text="@string/return_date"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/return_txv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:textStyle="bold"
            tools:text="04 de julio" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:text="@string/availability"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/availability_txv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:textStyle="bold"
            tools:text="50" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:text="@string/price"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/price_txv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:textStyle="bold"
            tools:text="150000" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:text="@string/sits_amount"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/NumbSistAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:text="@string/total"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/total_txv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:textStyle="bold"
            tools:text="300000" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView22"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/payment_method"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/paymentMethod"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="15sp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_reserve"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8sp"
            android:layout_weight="1"
            android:background="@drawable/custom_button"
            android:text="@string/reserve"
            android:textAllCaps="true" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8sp"
            android:layout_weight="1"
            android:background="@drawable/custom_button"
            android:text="@string/cancel" />
    </LinearLayout>

</LinearLayout>